Bug 409245 - pop-up messages do no dissapears
Summary: pop-up messages do no dissapears
Status: RESOLVED FIXED
Alias: None
Product: Ruqola
Classification: Applications
Component: frontend (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Laurent Montel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-27 13:02 UTC by Marcelo Martins
Modified: 2019-06-27 19:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
IE pop-up still opened (258.75 KB, image/png)
2019-06-27 13:02 UTC, Marcelo Martins
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marcelo Martins 2019-06-27 13:02:23 UTC
Created attachment 121181 [details]
IE pop-up still opened

SUMMARY
When received a private messages, show a pop-up messages. But this not have a timeout to disappear. 

Only close if you click to close.

If you can continue typing in chat, pop-up still showing, and new pop-ups are stacked.

STEPS TO REPRODUCE
1. Recevie a particular message
2. Pop-up show, and not disappears until you click to close.



EXPECTED RESULT
pop-up messages will be close automatic, after some time.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  Opensuse Tumbleweed 20190623
(available in About System)
KDE Plasma Version: 5.16.1 
KDE Frameworks Version: 5.59.0
Qt Version: 5.12.3
KErnel version: 5.1.7-1-default
Comment 1 Laurent Montel 2019-06-27 19:50:43 UTC
Git commit 4d9fc3b5737ffb695f448ba28d49769a411097cc by Laurent Montel.
Committed on 27/06/2019 at 19:49.
Pushed by mlaurent into branch 'master'.

Comment "Configure Account" which is not implemented

M  +8    -8    src/apps/qml/Desktop.qml

https://commits.kde.org/ruqola/4d9fc3b5737ffb695f448ba28d49769a411097cc
Comment 2 Laurent Montel 2019-06-27 19:50:43 UTC
Git commit 20885691b7923f986a7ff68f3cf1e176bd1c9948 by Laurent Montel.
Committed on 27/06/2019 at 19:50.
Pushed by mlaurent into branch 'master'.

Fix Bug 409245 - pop-up messages do no dissapears ruqola

M  +1    -3    src/ruqolacore/ruqola.cpp

https://commits.kde.org/ruqola/20885691b7923f986a7ff68f3cf1e176bd1c9948