Fix Bug 409245 - pop-up messages do no dissapears ruqola

BUG: 409245